Added channel info and debugging tempo changes